--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @task, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for @task, :html => { :class => 'form-horizontal', novalidate: true } do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.input :scheduled_to, start_year: Date.today.year %>
