--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,41 +2,40 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:scheduled_to) %></th>
-      <th><%= model_class.human_attribute_name(:status) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= link_to task.id, task_path(task) %></td>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= task.scheduled_to %></td>
-        <td><%= task.status %></td>
-        <td><%=l task.created_at %></td>
-        <td>
+
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_task_path,
+            :class => 'btn btn-primary' %>
+
+<% tasks_grouped_by_scheduled_date(@tasks).each do |date, tasks| %>
+  <% tasks.each_with_index do |task, index| %>
+    <% decorate(task) do |task_decorator| %>
+      <% if index == 0 %>
+      <h2><%= task_decorator.date %></h2>
+      <% end %>
+      <div class="row task">
+        <div class="span2">
+          <%= link_to task_decorator.time, task_path(task_decorator) %>
+        </div>
+        <div class="span2">
+          <%= task_decorator.name %>
+        </div>
+        <div class="span4"><%= task_decorator.description %></div>
+        <div class="span2"><%= task_decorator.status %></div>
+        <div class="span2">
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_task_path(task), :class => 'btn btn-mini' %>
+
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       task_path(task),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_task_path,
-            :class => 'btn btn-primary' %>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+<% end %>
+
+
