--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,14 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fluid-top">
+    <div id="login_bar" class="container-fluid">
+      <div class="row-fluid">
+        <div class="span10"><%= t('system.messages.logged_as', name: current_user.email) %></div>
+        <div class="span2 text-right"><%= link_to t('system.messages.logout'), :destroy_user_session, method: :delete %></div>
+      </div>
+    </div>
+
+    <div id="top_bar" class="navbar navbar-fluid-top">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
@@ -33,6 +40,9 @@
         </div>
       </div>
     </div>
+
+    
+              
 
     <div class="container-fluid">
       <div class="row-fluid">
