--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,9 +11,9 @@
   <% tasks.each_with_index do |task, index| %>
     <% decorate(task) do |task_decorator| %>
       <% if index == 0 %>
-      <h2><%= task_decorator.date %></h2>
+        <h2 data-date-group="<%= date %>"><%= task_decorator.date %></h2>
       <% end %>
-      <div class="row task">
+      <div class="record-container row-fluid task" data-date-group="<%= date %>">
         <div class="span2">
           <%= link_to task_decorator.time, task_path(task_decorator) %>
         </div>
@@ -27,10 +27,12 @@
                       edit_task_path(task), :class => 'btn btn-mini' %>
 
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      task_path(task),
+                      task_path(task, :json),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn btn-mini btn-danger destroy_task',
+                      remote: true
+          %>
 
         </div>
       </div>
