Fixed some presentation stuff

--- a/app/assets/stylesheets/tasks.css.sass
+++ b/app/assets/stylesheets/tasks.css.sass
@@ -1,5 +1,15 @@
-.task
+.task_list_item
   border: 1px solid #eee
   padding: 10px
   margin: 10px
 
+#task_scheduled_to_2i
+  width: 120px
+
+#task_scheduled_to_1i
+  width: 90px
+
+#task_scheduled_to_3i,
+#task_scheduled_to_4i,
+#task_scheduled_to_5i
+  width: 60px
