--- a/app/assets/stylesheets/tasks.css.sass
+++ b/app/assets/stylesheets/tasks.css.sass
@@ -13,3 +13,12 @@
 #task_scheduled_to_4i,
 #task_scheduled_to_5i
   width: 60px
+
+label.date
+  width: 60px!important
+
+#filter
+  background: #eee
+  width: 100%
+  padding: 5%
+  margin-bottom: 20px
