--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,8 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3">
+          <%= yield(:sidebar) %>
+
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
