--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:sidebar) { render partial: 'filter' } %>
+
 <%- model_class = Task -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
@@ -5,7 +7,7 @@
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_task_path,
-            :class => 'btn btn-primary' %>
+            :class => 'btn btn-primary left' %>
 
 <% tasks_grouped_by_scheduled_date(@tasks).each do |date, tasks| %>
   <% tasks.each_with_index do |task, index| %>
