Improved login status

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -7,7 +7,11 @@
   margin: 0
   padding-bottom: 5px
   padding-top: 5px
-  
+
+  li
+    list-style: none
+    float: left
+    margin: 0 10px
 
 .text-left
   text-align: left
@@ -18,3 +22,48 @@
   text-align: left
 .left
   float: right
+
+.login_status
+  float: left
+  text-align: left
+  margin-top: 5px
+
+  .face
+    width: 25px
+    height: 25px
+    float: left
+
+  .name, .login-text
+    margin-left: 10px
+    float: left
+    display: block
+  .login-text
+    line-height: 35px
+    vertical-align: middle
+    float: left
+
+.login-text
+  display: none
+
+.login.facebook
+  text-indent: -900px
+
+.login.facebook.huge
+  background: url(/assets/authbuttons/facebook_256.png)
+  width: 256px
+  height: 256px
+
+.login.facebook.big
+  background: url(/assets/authbuttons/facebook_128.png)
+  width: 128px
+  height: 128px
+
+.login.facebook.medium
+  background: url(/assets/authbuttons/facebook_64.png)
+  width: 64px
+  height: 64px
+
+.login.facebook.small
+  background: url(/assets/authbuttons/facebook_32.png)
+  width: 32px
+  height: 32px
