--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
+<h1>Agenda</h1>
+<p>Receba seus compromissos do dia e da semana por email</p>
+
+<h2>Crie sua conta</h2>
+<p>Para criar a sua conta basta fazer o login com o facebook, no link abaixo:</p>
 <%= facebook_login_button(:big) %>
+
