--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,26 +15,19 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
   </head>
   <body>
-
-    <div id="login_bar" class="container-fluid">
-      <div class="row-fluid">
-        <div class="span10"><%= t('system.messages.logged_as', name: current_user.email) %></div>
-        <div class="span2 text-right"><%= link_to t('system.messages.logout'), destroy_user_session_path %></div>
-      </div>
-    </div>
-
-    <div id="top_bar" class="navbar navbar-fluid-top">
+    <div id="top_bar" class="navbar navbar-fluid-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
+          <%= render partial: 'login_status' %>
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Agenda</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <li><%= link_to Task.model_name.human, :tasks  %></li>
+              <li><%= link_to t('system.messages.logout'), destroy_user_session_path %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
