--- a/app/views/layouts/guest.html.erb
+++ b/app/views/layouts/guest.html.erb
@@ -16,11 +16,18 @@
   </head>
   <body>
 
+      <div id="top_bar" class="navbar navbar-fluid-top navbar-inverse">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <%= render partial: 'login_status' %>
+        </div>
+      </div>
+    </div>
+
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3"></div>
         <div class="span6">
-          <%= facebook_login_button(:small) %>
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
