--- a/app/views/tasks/_filter.html.erb
+++ b/app/views/tasks/_filter.html.erb
@@ -18,18 +18,18 @@
     <div class="control-group">
       <div class="input-prepend input-append">
         <%= label_tag :from, t('system.forms.from'), class: 'add-on date' %>
-        <%= date_field_tag :from, params[:from], data: { 'date-format' => date_format }, class: 'date input-small' %>
+        <%= text_field_tag :from, params[:from], data: { 'date-format' => date_format }, class: 'date input-small' %>
         <span class="add-on">
           <i class="icon-calendar"></i>
         </span>
       </div>
     </div>
 
-    
+
     <div class="control-group">
       <div class="input-prepend input-append">
         <%= label_tag :to, t('system.forms.to'), class: 'add-on date' %>
-        <%= date_field_tag :to, params[:to], data: { 'date-format' => date_format }, class: 'date input-small' %>
+        <%= text_field_tag :to, params[:to], data: { 'date-format' => date_format }, class: 'date input-small' %>
         <span class="add-on">
           <i class="icon-calendar"></i>
         </span>
@@ -39,7 +39,7 @@
     <div class="control-group">
       <button type="submit" class="btn btn-success left"><%= t('system.forms.search') %></button>
     </div>
-    
+
   <% end -%>
 
 </div>
