--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,38 +8,17 @@
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_task_path,
             :class => 'btn btn-primary left' %>
-
-<% tasks_grouped_by_scheduled_date(@tasks).each do |date, tasks| %>
-  <% tasks.each_with_index do |task, index| %>
-    <% decorate(task) do |task_decorator| %>
-      <% if index == 0 %>
-        <h2 data-date-group="<%= date %>"><%= task_decorator.date %></h2>
+  <% tasks_grouped_by_scheduled_date(@tasks).each do |date, tasks| %>
+    <% tasks.each_with_index do |task, index| %>
+      <% decorate(task) do |task_decorator| %>
+        <div class="tasks" date-group="<%= date %>">
+          <% if index == 0 %>
+            <h2 data-date-group="<%= date %>"><%= task_decorator.date %></h2>
+          <% end %>
+          <%= render partial: 'task', locals: { date: date, decorator: task_decorator } %>
+        </div>
       <% end %>
-      <div class="record-container row-fluid task_list_item" data-date-group="<%= date %>">
-        <div class="span2">
-          <%= link_to task_decorator.time, task_path(task_decorator) %>
-        </div>
-        <div class="span2">
-          <%= task_decorator.name %>
-        </div>
-        <div class="span4"><%= task_decorator.description %></div>
-        <div class="span2"><%= task_decorator.status %></div>
-        <div class="span2">
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_task_path(task), :class => 'btn btn-mini' %>
-
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      task_path(task, :json),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger destroy_task',
-                      remote: true
-          %>
-
-        </div>
-      </div>
     <% end %>
   <% end %>
-<% end %>
 
 
